// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentHubArticleList /> renders base component correctly with pattern 0 1`] = `
<section>
  <div
    className="base"
  >
    <div
      className="top-left-0 article"
    >
      <div
        className="base fadeEnter"
        id="test_1"
      >
        <div
          className="category"
        >
          Product
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_1_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="1. Senorial consectetur adipiscing elit."
          >
            <span>
              1. Senorial consectetur adipiscing elit.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_1_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="1. Senorial consectetur adipiscing elit."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_1_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="1. Senorial consectetur adipiscing elit."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
    <div
      className="top-right-0 article"
    >
      <div
        className="base fadeEnter"
        id="test_2"
      >
        <div
          className="category"
        >
          Product
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_2_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <span>
              2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_2_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_2_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
    <div
      className="bottom-left-0 article"
    >
      <div
        className="base fadeEnter"
        id="test_3"
      >
        <div
          className="category"
        >
          Culture
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_3_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <span>
              3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_3_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_3_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
    <div
      className="bottom-right-0 article"
    >
      <div
        className="base fadeEnter"
        id="test_4"
      >
        <div
          className="category"
        >
          Aesop Spotify
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_4_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <span>
              4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_4_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_4_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="mobile"
  >
    <div
      className="base fadeEnter"
      id="test_1"
    >
      <div
        className="category"
      >
        Product
      </div>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          className="base left dark title"
          data-test-ref="test_1_TITLE"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="1. Senorial consectetur adipiscing elit."
        >
          <span>
            1. Senorial consectetur adipiscing elit.
          </span>
        </a>
      </div>
      <div
        className="note"
      >
        15 minute read
      </div>
      <a
        className="base left dark image nonMobile"
        data-test-ref="test_1_NON_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="1. Senorial consectetur adipiscing elit."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
      <a
        className="base left dark image mobile"
        data-test-ref="test_1_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="1. Senorial consectetur adipiscing elit."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
    </div>
    <div
      className="mobileMiddleRow"
    >
      <div
        className="middleArticle"
      >
        <div
          className="base leftMiddleArticle fadeEnter"
          id="test_2"
        >
          <div
            className="category"
          >
            Product
          </div>
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <a
              className="base left dark title"
              data-test-ref="test_2_TITLE"
              href="https://www.aesop.com/au/r/careers?contentful=true"
              target="_self"
              title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
            >
              <span>
                2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </a>
          </div>
          <div
            className="note"
          >
            15 minute read
          </div>
          <a
            className="base left dark image nonMobile"
            data-test-ref="test_2_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
          <a
            className="base left dark image mobile"
            data-test-ref="test_2_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        className="middleArticle"
      >
        <div
          className="base rightMiddleArticle fadeEnter"
          id="test_3"
        >
          <div
            className="category"
          >
            Culture
          </div>
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <a
              className="base left dark title"
              data-test-ref="test_3_TITLE"
              href="https://www.aesop.com/au/r/careers?contentful=true"
              target="_self"
              title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <span>
                3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </a>
          </div>
          <div
            className="note"
          >
            15 minute read
          </div>
          <a
            className="base left dark image nonMobile"
            data-test-ref="test_3_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
          <a
            className="base left dark image mobile"
            data-test-ref="test_3_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      className="base fadeEnter"
      id="test_4"
    >
      <div
        className="category"
      >
        Aesop Spotify
      </div>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          className="base left dark title"
          data-test-ref="test_4_TITLE"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <span>
            4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
          </span>
        </a>
      </div>
      <div
        className="note"
      >
        15 minute read
      </div>
      <a
        className="base left dark image nonMobile"
        data-test-ref="test_4_NON_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
      <a
        className="base left dark image mobile"
        data-test-ref="test_4_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
    </div>
  </div>
</section>
`;

exports[`<ContentHubArticleList /> renders base component correctly with pattern 1 1`] = `
<section>
  <div
    className="base"
  >
    <div
      className="top-left-1 article"
    >
      <div
        className="base fadeEnter"
        id="test_1"
      >
        <div
          className="category"
        >
          Product
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_1_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="1. Senorial consectetur adipiscing elit."
          >
            <span>
              1. Senorial consectetur adipiscing elit.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_1_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="1. Senorial consectetur adipiscing elit."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_1_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="1. Senorial consectetur adipiscing elit."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
    <div
      className="top-right-1 article"
    >
      <div
        className="base fadeEnter"
        id="test_2"
      >
        <div
          className="category"
        >
          Product
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_2_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <span>
              2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_2_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_2_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
    <div
      className="bottom-left-1 article"
    >
      <div
        className="base fadeEnter"
        id="test_3"
      >
        <div
          className="category"
        >
          Culture
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_3_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <span>
              3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_3_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_3_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
              />
              <img
                alt="horizontal_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
    <div
      className="bottom-right-1 article"
    >
      <div
        className="base fadeEnter"
        id="test_4"
      >
        <div
          className="category"
        >
          Aesop Spotify
        </div>
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <a
            className="base left dark title"
            data-test-ref="test_4_TITLE"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <span>
              4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
            </span>
          </a>
        </div>
        <div
          className="note"
        >
          15 minute read
        </div>
        <a
          className="base left dark image nonMobile"
          data-test-ref="test_4_NON_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
        <a
          className="base left dark image mobile"
          data-test-ref="test_4_MOBILE_THUMBNAIL"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <picture
              className="base picture dark image"
            >
              <source
                media="(min-width: 1025px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 640px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <source
                media="(min-width: 0px)"
                srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
              />
              <img
                alt="vertical_hub"
              />
            </picture>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="mobile"
  >
    <div
      className="base fadeEnter"
      id="test_1"
    >
      <div
        className="category"
      >
        Product
      </div>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          className="base left dark title"
          data-test-ref="test_1_TITLE"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="1. Senorial consectetur adipiscing elit."
        >
          <span>
            1. Senorial consectetur adipiscing elit.
          </span>
        </a>
      </div>
      <div
        className="note"
      >
        15 minute read
      </div>
      <a
        className="base left dark image nonMobile"
        data-test-ref="test_1_NON_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="1. Senorial consectetur adipiscing elit."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
      <a
        className="base left dark image mobile"
        data-test-ref="test_1_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="1. Senorial consectetur adipiscing elit."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
    </div>
    <div
      className="mobileMiddleRow"
    >
      <div
        className="middleArticle"
      >
        <div
          className="base leftMiddleArticle fadeEnter"
          id="test_2"
        >
          <div
            className="category"
          >
            Product
          </div>
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <a
              className="base left dark title"
              data-test-ref="test_2_TITLE"
              href="https://www.aesop.com/au/r/careers?contentful=true"
              target="_self"
              title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
            >
              <span>
                2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </a>
          </div>
          <div
            className="note"
          >
            15 minute read
          </div>
          <a
            className="base left dark image nonMobile"
            data-test-ref="test_2_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
          <a
            className="base left dark image mobile"
            data-test-ref="test_2_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
      <div
        className="middleArticle"
      >
        <div
          className="base rightMiddleArticle fadeEnter"
          id="test_3"
        >
          <div
            className="category"
          >
            Culture
          </div>
          <div
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <a
              className="base left dark title"
              data-test-ref="test_3_TITLE"
              href="https://www.aesop.com/au/r/careers?contentful=true"
              target="_self"
              title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
            >
              <span>
                3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
              </span>
            </a>
          </div>
          <div
            className="note"
          >
            15 minute read
          </div>
          <a
            className="base left dark image nonMobile"
            data-test-ref="test_3_NON_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
          <a
            className="base left dark image mobile"
            data-test-ref="test_3_MOBILE_THUMBNAIL"
            href="https://www.aesop.com/au/r/careers?contentful=true"
            target="_self"
            title="3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
          >
            <div
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <picture
                className="base picture dark image"
              >
                <source
                  media="(min-width: 1025px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 640px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <source
                  media="(min-width: 0px)"
                  srcSet="./assets/images/ContentHubArticle/vertical_hub.jpg"
                />
                <img
                  alt="vertical_hub"
                />
              </picture>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      className="base fadeEnter"
      id="test_4"
    >
      <div
        className="category"
      >
        Aesop Spotify
      </div>
      <div
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          className="base left dark title"
          data-test-ref="test_4_TITLE"
          href="https://www.aesop.com/au/r/careers?contentful=true"
          target="_self"
          title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
        >
          <span>
            4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante.
          </span>
        </a>
      </div>
      <div
        className="note"
      >
        15 minute read
      </div>
      <a
        className="base left dark image nonMobile"
        data-test-ref="test_4_NON_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
      <a
        className="base left dark image mobile"
        data-test-ref="test_4_MOBILE_THUMBNAIL"
        href="https://www.aesop.com/au/r/careers?contentful=true"
        target="_self"
        title="4. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et ornare mauris, id dictum ante. Suspendisse et ornare mauris, id dictum ante."
      >
        <div
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <picture
            className="base picture dark image"
          >
            <source
              media="(min-width: 1025px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 640px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <source
              media="(min-width: 0px)"
              srcSet="./assets/images/ContentHubArticle/horizontal_hub.jpg"
            />
            <img
              alt="horizontal_hub"
            />
          </picture>
        </div>
      </a>
    </div>
  </div>
</section>
`;
